@@ -43,6 +43,7 @@ PHP                                                                        NEWS
   before shutdown) (basant dot kukreja at sun dot com)
 - Fixed bug #45406 (session.serialize_handler declared by shared extension 
   fails). (Kalle, oleg dot grenrus at dynamoid dot com)
+- Fixed bug #45392 (ob_start()/ob_end_clean() and memory_limit). (Arnaud)
 - Fixed bug #45352 (Segmentation fault because of tick function on second
   request). (Dmitry)
 - Fixed bug #45312 (Segmentation fault on second request for array functions).
